Fixed slider on small screens. Fit workflow diagram to screen size

--- a/app/assets/stylesheets/workflows.scss
+++ b/app/assets/stylesheets/workflows.scss
@@ -1,5 +1,5 @@
 #cy {
-  height: 600px;
+  height: 650px;
   width: 100%;
 }
 
@@ -47,26 +47,14 @@
 .workflow-diagram-container {
   border: 1px solid #ccc;
   display: flex;
-
-  @media (max-width: $screen-md-min) {
-    flex-direction: column-reverse;
-  }
 }
 
 #workflow-diagram-sidebar {
   flex-shrink: 0;
   width: 300px;
   border-left: 1px solid #ccc;
-  @media (min-width: $screen-lg-min) {
-    width: 450px;
-  }
-
-  @media (max-width: $screen-md-min) {
-    border-left: none;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 20px;
-    width: 100%;
-  }
+  background-color: #fff;
+  z-index: 10;
 }
 
 #workflow-diagram-content {
@@ -86,16 +74,12 @@
   overflow-x: hidden;
 }
 
-.split.split-horizontal, .gutter.gutter-horizontal {
-  height: 100%;
-  float: left;
-}
-
 .gutter {
   background-color: #eee;
-
+  border-left: 1px solid #ccc;
   background-repeat: no-repeat;
   background-position: 50%;
+  z-index: 11;
 }
 
 .gutter.gutter-horizontal {
